edited api call and html

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       text-rendering: optimizeLegibility;
     }
   </style>
-  <link rel="stylesheet" href="../dist/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -185,7 +185,18 @@
             </div>
           </div>
         </div>
-        <a class="button w-button">view all latest posts</a>
+      <!-- Cateogries: Sports, travel, realestate, us, world, business, technology, science, food, health, jobs, politics -->
+<!-- Maybe real estate, jobs, food -->
+        <!-- <div class="categorie-btns"> -->
+        <a class="button w-button category-btn" data-category="us">US</a>
+        <a class="button w-button category-btn" data-category="world">World</a>
+        <a class="button w-button category-btn" data-category="business">Business</a>
+        <a class="button w-button category-btn" data-category="technology">Tech</a>
+        <a class="button w-button category-btn" data-category="science">Science</a>
+        <a class="button w-button category-btn" data-category="health">Health</a>
+        <a class="button w-button category-btn" data-category="politics">Politics</a>
+        <!-- </div> -->
+
       </div>
     </div>
   </div>
