--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation w-nav">
     <div class="navigation-container">
-      <a href="/" class="logo w-inline-block w--current"><img
+      <!-- <a href="/" class="logo w-inline-block w--current"><img
           src="https://uploads-ssl.webflow.com/5b471332a0fccf5aded82f96/5b471562a0981421175a45a5_noiceland_logo.svg"
-          alt="" class="image-logo" /></a>
+          alt="" class="image-logo" /></a> -->
+          <a href="/" class="a-nav-title"><div class="nav-title">
+          NEWSLAND
+          </div></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="/" class="navigation-link w-inline-block w--current">
           <div class="navigation-link-text">Home</div>
@@ -73,7 +76,7 @@
           <div class="posts-collection-list w-dyn-items w-row articles-view-top">
 
             <div class="articles-view-container">
-              
+
             </div>
             <!-- <div class="_4-collection-item w-dyn-item w-col w-col-3">
               <a href="/posts/japan-house-opens" class="posts-image w-inline-block"><img
@@ -332,9 +335,9 @@
     <div class="container-footer">
       <div class="container">
         <div class="top-section">
-          <a href="#" class="logo cc-footer w-inline-block"><img
-              src="https://uploads-ssl.webflow.com/5b471332a0fccf5aded82f96/5b4759f1ee75f16151397de3_logo-white.svg"
-              alt="" class="image-logo" /></a>
+          <a href="/" class="logo cc-footer w-inline-block"><div class="nav-title">
+            NEWSLAND
+          </div></a>
           <div class="footer-small-text">© 2018 Noiceland™, all rights reserved</div>
         </div>
       </div>
