added comments view

--- a/index.html
+++ b/index.html
@@ -100,47 +100,31 @@
 
 
 
+
+
+          </div>
+
+
+
+
+
+        </div>
+
+      </div>
+
+<!-- Comments -->
 <div class="comments-section">
+      <h4>COMMENTS</h4>
+
   <div class="comments">
-    <h4>COMMENTS</h4>
     <div id="comments-container">
       <div class="comment">
-        <div class="comment-user">
-          <div class="avatar"><img src="//s3-us-west-2.amazonaws.com/s.cdpn.io/49366/profile/profile-80_1.jpg"
-              alt="Riccardo" /></div><span class="user-details"><span class="username">Riccardo </span><span>on
+        <div class="comment-user"><span class="user-details"><span class="username">Riccardo </span><span>on
             </span><span>MARCH 7, 2016</span></span>
         </div>
         <div class="comment-text">
           "Draft.js is a framework for building rich text editors in React, powered by an immutable model and
-          abstracting over cross-browser differences."<br><br>
-          <a href="https://facebook.github.io/draft-js/">Draft.js</a> home page.
-        </div>
-      </div>
-      <div class="comment">
-        <div class="comment-user">
-          <div class="avatar"><img src="//s3-us-west-2.amazonaws.com/s.cdpn.io/49366/profile/profile-80_1.jpg"
-              alt="Riccardo" /></div><span class="user-details"><span class="username">Riccardo </span><span>on
-            </span><span>MARCH 7, 2016</span></span>
-        </div>
-        <div class="comment-text">
-          This demo demonstrate a basic implementation of <strong>Draft.js</strong> <br>
-          It's a powerfoul React framework. You can try styling your comment with the pleasure of see the effects live
-          instead of the guard characters of markdown. <br><br><br>
-          Watch the official presentation at the React.js Conf 2016. <a
-            href="https://www.youtube.com/watch?v=feUYwoLhE_4">WATCH!!</a>
-        </div>
-      </div>
-      <div class="comment">
-        <div class="comment-user">
-          <div class="avatar"><img src="//s3-us-west-2.amazonaws.com/s.cdpn.io/49366/profile/profile-80_1.jpg"
-              alt="Riccardo" /></div><span class="user-details"><span class="username">Riccardo </span><span>on
-            </span><span>MARCH 7, 2016</span></span>
-        </div>
-        <div class="comment-text">
-          Try actions like keyboard shortcuts for inline styling. Also try tagging someone! Maybe me @rkpasia :)
-          <br><br>
-          Have fun.<br>
-          Be cool.
+          abstracting over cross-browser differences."
         </div>
       </div>
     </div>
@@ -148,37 +132,43 @@
 </div>
 
 <div id="comment_form">
-  <div>
-    <textarea rows="10" name="comment" id="comment" placeholder="Comment"></textarea>
+  <div class="form-area">
+    <textarea rows="4" cols="70" name="comment" id="comment" placeholder="Comment"></textarea>
   </div>
   <div>
-    <input type="submit" name="submit" value="Add Comment">
+    <input class="submit-button comment-submit" type="submit" name="submit" value="Add Comment">
+  </div>
+</div>
+
+<!-- End Comments -->
+
+<div class="footer-back-btn">
+  <div class="section-title-text category-title" style="">
+    <a class="w-button back-btn">Back</a>
   </div>
 </div>
 
 
 
-      <div class="footer-back-btn">
-      <div class="section-title-text category-title" style="">
-        <a class="w-button back-btn">Back</a>
-      </div>
-      </div>
 
 
 
-          </div>
 
-
-        </div>
-
-      </div>
     </div>
+
+
+
   </div>
-  <div class="separator">
+  <!-- <div class="separator">
     <div class="separator-container">
       <div class="line-color"></div>
     </div>
-  </div>
+  </div> -->
+
+
+
+
+
   <div class="pagination footer-pagination" style=""></div>
 
   <div class="main-footer">
